--- a/client/cordova/ZUMOAPPNAME/www/index.html
+++ b/client/cordova/ZUMOAPPNAME/www/index.html
@@ -49,7 +49,7 @@
             </footer>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+        <script data-main="js/index.js" src="js/lib/require.js"></script>
+        <script type="text/javascript" src="js/lib/jquery.js"></script>
     </body>
 </html>
